--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
     <script src="js/jquery.graphviz.svg.js"></script>
 
 
-<!-- temp fix for the 'cannot find 'favicon.ico' error -->
+<!-- temp fix for the 'cannotç find 'favicon.ico' error -->
     <link rel="shortcut icon">
 
 
@@ -92,7 +92,7 @@ Editor Settings
       function mouseEnterCommit(evt) {
         var details = document.getElementsByTagNameNS(evt.target, "title")[0]  
         
-        console.log(details)
+        console.log(details) 
         evt.target.setAttributeNS(null,"opacity","0.5");
         var li = document.createElement('li');
         li.innerHTML = evt;
@@ -208,8 +208,6 @@ function openSocket() {
                     let graph = JSON.parse(arg);
                     console.log(graph)
                     let svg = make_svg_from_commits(graph);
-                    console.log(svg)
-
                     //push the svg content to the gitgraph div
                     $("#gitgraph").html(svg)
                     //make the gitgraph resizeable
@@ -700,7 +698,7 @@ function make_svg_from_commits(graph) {
     }
 
     // wrap the svg commands in an svg element, and return:
-    return `<svg width=100% style="width:${width}; height:${height};" version="1.1" xmlns="http://www.w3.org/2000/svg">${svg.join("\n")}<g id="nodes"></svg>`;
+    return `<svg width=100% style="width:${width}; height:${height};" version="1.1" xmlns="http://www.w3.org/2000/svg">${svg.join("\n")}</svg>`;
 
 }
 
