commented-out mousewheel.min.js -- currently not in use.

--- a/client/index.html
+++ b/client/index.html
@@ -31,10 +31,10 @@
     <!-- scripts -->
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/jquery-ui.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
+    <!-- <script src="js/jquery.mousewheel.min.js"></script> -->
     <script src="js/jquery.color.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.graphviz.svg.js"></script>
+ 
 
 
 <!-- temp fix for the 'cannotç find 'favicon.ico' error -->
