commented out more non-mergeview code

--- a/client/index.html
+++ b/client/index.html
@@ -167,10 +167,13 @@ function openSocket() {
     ws.binaryType = 'arraybuffer';
     ws.onopen = function() {
         // log('open');  
-        ws.send("client_SVG?")
+
+        //**
+        /*ws.send("client_SVG?")
 
         ws.send("getCurrentBranch")
         sessionStorage.echoServer = url;
+        */
     };
     ws.onclose = function() {
         // log('close');
