commented out the iccoder stylesheet

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel=stylesheet href="cm/docs.css">
     <link rel=stylesheet href="cm/codemirror.css">
     <link rel=stylesheet href="cm/merge.css">
-    <link rel=stylesheet href="cm/icecoder.css">
+    <!-- <link rel=stylesheet href="cm/icecoder.css"> -->
 
     <!-- scripts -->
     <script src="cm/codemirror.js"></script>
