commented out the editor settings

--- a/client/index.html
+++ b/client/index.html
@@ -61,9 +61,9 @@
 
 <!-- Customize the Codemirror Instance -->
 Editor Settings
-<button id="live_diffing" onclick="toggleDifferences()">Toggle: Live Diffing</button> 
+<!-- <button id="live_diffing" onclick="toggleDifferences()">Toggle: Live Diffing</button> 
 <button id="toggleCollapse" onclick="collapse = !collapse; initUI()">Toggle: Collapse Changes</button> 
-<button id="align" onclick="connect = connect ? null : 'align'; initUI()">Toggle: Align Changes</button> 
+<button id="align" onclick="connect = connect ? null : 'align'; initUI()">Toggle: Align Changes</button>  -->
 <p>
 
 <!-- Send code to server -->
