added console logs to ensure the server isn't the source of the slow loading of client page

--- a/client/index.html
+++ b/client/index.html
@@ -326,7 +326,7 @@ function openSocket() {
                         orig1 = arg
                         initUI();   
                         $( function() {
-                            $( "#view" ).resizable();
+                            $( "#view" )
                         });                       
                         break;
 
