added a guest option for sign in on the client. will have to add this to the server

--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
     <select id="userName" onchange="userSelect();">
             <option selected disabled>Please Select User</option> 
             <option >Michael Palumbo emailmichaelpalumbo@gmail.com</option>
+            <option >Guest</option>
     </select> 
        
 </form>
