finished the leftCode committing under author name. now moved on to editedRightCode: since 'wc' is unix-only, need to build a different  branch creator, starting with windows

--- a/client/index.html
+++ b/client/index.html
@@ -704,7 +704,7 @@ function initUI() {
     dv.rightOriginal().on("changes", function(dv, changeObj){
         
         if (isRightDirty == false && currentBranch == "master") {
-            ws.send("createNewBranch " + thisHash)
+            ws.send("editedRightCode " + thisHash)
         //    switch (currentBranch) {
         //         case "master":
         //         console.log("the current branch is MASTER")
