--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <title>Alicenode: Client</title>
 <meta charset="utf-8"/>
 
+<meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080">
 <!--        SOURCES         -->
 <!-- Codemirror -->
     <!-- styles -->
@@ -65,6 +66,7 @@
        <!-- emailmichaelpalumbo@gmail.com -->
 </form>
 
+
 <!-- Customize the Codemirror Instance -->
 Editor Settings
 <p></p>
@@ -90,6 +92,17 @@ Editor Settings
 <!-- Send code to server -->
 <button onclick="sendLeftCode()">Send Left Code</button>
 <button onclick="sendCodeRelay()">Send Right Code</button>
+<br>
+
+<div id="chooseBranch">
+ 
+    <form name="branches"> 
+        <select id="chooseBranch" onchange="chooseBranch();"> 
+                <option value="master">master</option>
+        </select> 
+        <!-- emailmichaelpalumbo@gmail.com -->
+    </form>
+</div>
 
 <!-- the Codemirror mergeview instance! -->
 <div id="container">
@@ -225,28 +238,29 @@ function openSocket() {
                         })
                         sel.selectedIndex = 2; 
 
+                    break;
+
+                    case "setBranchList":
+                        
+                    // <form name="branches"> 
+                    //  <select id="chooseBranch" onchange="chooseBranch();"> 
+
+                        usebranchList = JSON.parse(arg);
+                        var sel = document.getElementById('chooseBranch');
+                        //var length = select;
+                            
+                        // for (i = 3; i < sel.length; i++) {
+                        //     sel.options[i] = null;
+                        //     }
+                        Object.keys(userlist).forEach(function (key) {
+                            var opt = document.createElement('option');
+                            opt.appendChild( document.createTextNode(key) );
+                            opt.value = key;
+                            sel.appendChild(opt);
+                        })
+                        sel.selectedIndex = 0;
 
 
-
-
-                            // $("chooseUser").append(
-                            // $.map(userlist, function(v,k){
-
-                            //     return $("<option>").val(k).text(v);
-                            // })
-                            // );
-
-                            // var list = document.getElementById("chooseUser");
-                            // for(var i in userlist) {
-                            //     console.log(userlist[i])
-                            // list.add(new Option(userlist[i].text, userlist[i].value));
-                            // }
-                        // $.each(arg, function(key, value) {
-                        //     $('chooseUser')
-                        //         .append($('<option>', { value : key })
-                        //             //.attr("value", key)
-                        //             .text(value));
-                        //})
                     break;
                     ////////////////////////////////////////////////////
                     //svg from server:
