commented out the auto branch switcher in the top of the server queue. now the client user will just have to pay attention to the pointed branch using the selection list in browser client

--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
        <!-- emailmichaelpalumbo@gmail.com -->
 </form>
 
-<div id="Branch">Branch HEADs: Current Branch is Highlighted!
+<div id="Branch">Branch HEADs: Left code editor currently pointed to highlighted branch below!
  
     <select style="width:100%; height:100%" name="branches" size="5" id="chooseBranch" onchange="chooseBranch();"> 
 
