commented out the client refresh that i use for developing

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 
 <!-- //TEMPORARY: just to aid in development workflow -->
-<meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080">
+<!-- <meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080"> -->
 <!--        SOURCES         -->
 <!-- Codemirror -->
     <!-- styles -->
