--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 
-<title>Alicenode: Client</title>
+<title>Alicenode Editor</title>
 <meta charset="utf-8"/>
 
 <!-- //TEMPORARY: just to aid in development workflow -->
-<!-- <meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080"> -->
+<meta http-equiv="refresh" content="5; URL=http://192.168.137.1:8080">
 <!--        SOURCES         -->
 <!-- Codemirror -->
     <!-- styles -->
@@ -106,8 +106,11 @@ Editor Settings
 
 
 <!-- the Codemirror mergeview instance! -->
+<!-- since i can't get the css right, i'm using unerlines for now! -->
+<p align="left">Always at master:HEAD_____________________________________________________Begins at master:HEAD, can be pointed to any commit chosen from graph to the right</p>
 <div id="container">
     <div id="view"></div>
+    
     <div id="gitgraph" style="text-align: left; padding-left: 10px"></div>
 </div>
 <p>
